--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -7,7 +7,7 @@
   {% comment %}Font Awesome CDN{% endcomment %}
 {% endblock %}
 {% block content %}
-  {% if person %}
+  {% if person_of_history %}
     <div class="container">
       <div class="row">
         <div class="col-4"></div>
@@ -20,12 +20,12 @@
     <div class="container text-center" id="main-container">
       <div class="row justify-content-center align-items-start">
         <div class="col-md-4">
-          <img src="{{ person.image.url }}" alt="{{ person.name }}" class="img-fluid mb-3" id="person-portrait" style="max-width: 300px;" />
+          <img src="{{ person_of_history.image.url }}" alt="{{ person_of_history.name }}" class="img-fluid mb-3" id="person_of_history-portrait" style="max-width: 300px;" />
         </div>
         <div class="col-md-7" id="text-container">
-          <h3>{{ person.name }}</h3>
-          <h5 class="text-muted">{{ person.nickname }}</h5>
-          <p class="mt-3">{{ person.story }}</p>
+          <h3>{{ person_of_history.name }}</h3>
+          <h5 class="text-muted">{{ person_of_history.nickname }}</h5>
+          <p class="mt-3">{{ person_of_history.story }}</p>
         </div>
       </div>
   {% else %}
