--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 .person-card {
     background-color: #f5ebd4;
     border-radius: 16px;
