--- a/familytree/templates/familytree/add_self.html
+++ b/familytree/templates/familytree/add_self.html
@@ -1,15 +1,27 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'css/familytree/forms/add_self.css' %}" />
+{% endblock %}
 {% block form_media %}
   {{ form.media }}
 {% endblock %}
 {% block content %}
-  <div class="container mt-5 text-center">
-    <h2>Tell us about you!</h2>
-    <form id="person-Form" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <button type="submit" class="btn btn-primary">Save</button>
-    </form>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-5">
+        <div class="card shadow-sm border-0">
+          <div class="card-body p-4">
+            <h2 class="text-center">Tell us about you!</h2>
+            <form id="person-Form" method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              {{ form|crispy }}
+              <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
