--- a/familytree/templates/familytree/edit_person.html
+++ b/familytree/templates/familytree/edit_person.html
@@ -2,17 +2,25 @@
 {% load static %}
 
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/familytree/edit_person.css' %}" />
 {% endblock %}
 
 {% block content %}
   <div class="container mt-5">
-    <h2>Edit Person</h2>
+    <div class="text-center">
+      <h2>Edit {{ person.first_name }}</h2>
+      {% if 'placeholder' in person.featured_image.url %}
+        <img class="profile-image" src="{% static 'images/user_default_images/default-image.png' %}" alt="placeholder image" />
+      {% else %}
+        <img class="profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
+      {% endif %}
+    </div>
+    
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Save</button>
-      <a href="{% url 'delete_person' pov_id person.id %}" class="btn btn-outline-danger">Delete</a>
+      <a href="{% url 'delete_person' pov_id person.id %}" class="btn btn-danger">Delete</a>
       <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary">Cancel</a>
     </form>
   </div>
