Add styling to footer pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
 {% url 'account_logout' as logout_url %}
 {% url 'add_self' as add_self_url %}
 {% url 'contact' as contact_url %}
-{% url 'datenschutz' as datenschutz_url %}
+{% url 'privacy_policy' as privacy_policy_url %}
 {% url 'demo' as 'demo_url' %}
-{% url 'impressum' as impressum_url %}
+{% url 'legal_notice' as legal_notice_url %}
 {% url 'home' as home_url %}
 {% url 'family_view' person.id as 'family_view_url' %}
 {% url 'person_of_the_day' as people_of_history_url %}
@@ -109,8 +109,8 @@
       <div class="container">
         <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved.</p>
         <nav class="footer-nav">
-          <a href="{% url 'impressum' %}">Legal Notice</a> |
-          <a href="{% url 'datenschutz' %}">Privacy Policy</a> |
+          <a href="{% url 'legal_notice' %}">Legal Notice</a> |
+          <a href="{% url 'privacy_policy' %}">Privacy Policy</a> |
           <a href="{% url 'contact' %}">Contact</a>
         </nav>
       </div>
