--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
-
+{%load static%}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
-
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'css/account/logout.css' %}" />
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign Out" %}</h3>
 
-            <p>{% trans 'Are you sure you want to sign out?' %}</p>
+            <p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
         </div>
     </div>
     <div class="row">
