--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,8 +3,8 @@
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}
-  {% trans 'Sign In' %}
+{% block title %}
+  <title>Login</title>
 {% endblock %}
 
 {% block extra_css %}
