--- a/templates/legal_notice.html
+++ b/templates/legal_notice.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+  <title>Legal Notice</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/base/legal_notice.css' %}" />
 {% endblock %}
