--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+  <title>Startview</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/base/privacy_policy.css' %}" />
 {% endblock %}
