--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+  <title>Add Family member</title>
+{% endblock %}
 {% block extra_css %}
   {% if relation == 'parent' %}
     <link rel="stylesheet" href="{% static 'css/familytree/forms/add_parent.css' %}" />
