--- a/familytree/templates/familytree/delete_person.html
+++ b/familytree/templates/familytree/delete_person.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+  <title>Delete Person</title>
+{% endblock %}
 {% block content %}
 <div class="container mt-5">
   <h3>Are you sure you want to delete {{ person.first_name }} {{ person.last_name }}?</h3>
