--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+  <title>View Person details</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/familytree/view_details.css' %}" />
 {% endblock %}
