--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block title %}
+  <title>People of History</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/people_of_history/people_of_history.css' %}" />
 {% endblock %}
