--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% load i18n %}
-
+{% block title %}
+  <title>Sign Up</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/account/signup.css' %}" />
 {% endblock %}
