--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Startview</title>
+    {% block title %}
+      
+    {%endblock%}
+    
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
     {% comment %}Custom CSS{% endcomment %}
