--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block title %}
+  <title>Contact</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/base/contact.css' %}" />
 {% endblock %}
