--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block title %}
+  <title>FAQ</title>
+{% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/base/faq.css' %}" />
 {% endblock %}
