Add meta-title-block into template

--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block meta %}
+ <meta name="description" content="Every day a new important person from history.">
+ <meta property="og:title" content="Person of the day - Yggdrasil" />
+ <meta property="og:description" content="Discover historical personalities and their family backgrounds." />
+{% endblock %}
 {% block title %}
   <title>People of History</title>
 {% endblock %}
