--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block meta %}
+  <meta name="description" content="Contact the Yggdrasil team for support, feedback or press inquiries." />
+  <meta property="og:title" content="Yggdrasil - Contact" />
+  <meta property="og:description" content="We look forward to hearing from you." />
+{% endblock %}
+
 {% block title %}
   <title>Contact</title>
 {% endblock %}
