--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block meta %}
+  <meta name="description" content="Welcome to Yggdrasil - your platform for interactive family tree navigation." />
+  <meta property="og:title" content="Yggdrasil - Homepage" />
+  <meta property="og:description" content="Start your journey through family history with one click." />
+{% endblock %}
+
 {% block title %}
   <title>Yggdrasil</title>
 {% endblock %}
