--- a/templates/legal_notice.html
+++ b/templates/legal_notice.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block meta %}
+  <meta name="description" content="Imprint of Yggdrasil - The Tree of Family." />
+  <meta property="og:title" content="Imprint - Yggdrasil" />
+  <meta property="og:description" content="Legal notice and information on provider identification." />
+{% endblock %}
 {% block title %}
   <title>Legal Notice</title>
 {% endblock %}
