--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block meta %}
+  <meta name="description" content="Our privacy policy: transparent, understandable and GDPR-compliant." />
+  <meta property="og:title" content="Privacy policy - Yggdrasil" />
+  <meta property="og:description" content="Here you can find out how we handle your data." />
+{% endblock %}
+
 {% block title %}
   <title>Startview</title>
 {% endblock %}
