--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% block meta %}
+      <!-- Default Meta Tags -->
+      <meta name="description" content="Create your family tree with Yggdrasil - private, secure and visual." />
+      <meta property="og:title" content="Yggdrasil - The Tree of Family" />
+      <meta property="og:description" content="Explore your family roots with a modern, data-secure family tree app." />
+      <meta property="og:image" content="{% static 'images/logos/yggdrasil_logo.png' %}" />
+      <meta property="og:type" content="website" />
+    {% endblock %}
     {% block title %}
-      
-    {%endblock%}
-    
+
+    {% endblock %}
+
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
     {% comment %}Custom CSS{% endcomment %}
@@ -33,6 +41,7 @@
     {% comment %}jQuery CDN for Select2{% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% block form_media %}
+
     {% endblock %}
   </head>
   <body>
