--- a/static/css/account/login.css
+++ b/static/css/account/login.css
@@ -13,7 +13,7 @@ h3 {
     font-size: 2rem;
     font-family: 'Playfair Display', serif;
     font-weight: bold;
-    color: #2f4f2f;
+    color: #ae8c1a;
     margin-top: 2rem;
 }
 
@@ -24,7 +24,7 @@ h3 {
     padding: 2rem 2.5rem;
     border-radius: 20px;
     box-shadow: 0 10px 28px rgba(0, 0, 0, 0.06);
-    border-top: 6px solid #8bc34a44;
+    border-top: 6px solid #ae8c1a;
 }
 
 .login p {
@@ -52,7 +52,7 @@ h3 {
 
 .login button[type="submit"] {
     width: 100%;
-    background-color: #66bb6a;
+    background-color: #ae8c1a;
     border: none;
     color: white;
     padding: 0.75rem;
