--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -15,7 +15,9 @@
   {% endif %}
 {% endblock %}
 {% load crispy_forms_tags %}
-
+{% block form_media %}
+  {{ form.media }}
+{% endblock %}
 {% block content %}
   <div class="container mt-5">
     <div class="row justify-content-center">
