--- a/staticfiles/css/account/logout.css
+++ b/staticfiles/css/account/logout.css
@@ -13,7 +13,7 @@ h3 {
     font-size: 2rem;
     font-family: 'Playfair Display', serif;
     font-weight: bold;
-    color: #5c4f3a;
+    color: #ae8c1a;
     margin-top: 2rem;
 }
 
@@ -31,12 +31,12 @@ form {
     padding: 2rem 2rem;
     border-radius: 16px;
     box-shadow: 0 10px 28px rgba(0, 0, 0, 0.06);
-    border-bottom: 6px solid #a1887f;
+    border-bottom: 6px solid #ae8c1a;
     text-align: center;
 }
 
 form button {
-    background-color: #a1887f;
+    background-color: #ae8c1a;
     border: none;
     color: white;
     padding: 0.75rem 2rem;
