--- a/staticfiles/css/account/signup.css
+++ b/staticfiles/css/account/signup.css
@@ -12,7 +12,7 @@ h1 {
     text-align: center;
     font-size: 2.2rem;
     font-family: 'Playfair Display', serif;
-    color: #2f4f2f;
+    color: #ae8c1a;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
 }
@@ -24,7 +24,7 @@ h1 {
     padding: 2rem 2.5rem;
     border-radius: 20px;
     box-shadow: 0 12px 32px rgba(0, 50, 0, 0.08);
-    border-left: 6px solid #8bc34a44;
+    border-left: 6px solid #ae8c1a;
 }
 
 .signup p {
@@ -53,7 +53,7 @@ h1 {
 
 .signup button[type="submit"] {
     width: 100%;
-    background-color: #66bb6a;
+    background-color: #ae8c1a;
     border: none;
     color: white;
     padding: 0.75rem;
