--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
 
       <main>
         {% if messages %}
-          <div class="container mt-3">
+          <div class="container mt-3 message-container">
             {% for message in messages %}
               <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
                 {{ message }}
@@ -131,6 +131,7 @@
 
     {% comment %}Bootstrap JS CDN{% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
+    <script src="{% static 'javascript/base.js' %}"></script>
     {% block javascript %}
 
     {% endblock %}
