--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
     </div>
     <footer class="footer text-center bg-white">
       <div class="container">
-        <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved.</p>
+        <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved. Created by<a href="https://github.com/fairytaib" target="_blank" rel="noopener noreferrer">Sophjan Moubarrid</a></p>
         <nav class="footer-nav">
           <a href="{% url 'legal_notice' %}">Legal Notice</a> |
           <a href="{% url 'privacy_policy' %}">Privacy Policy</a> |
