--- a/static/css/account/signup.css
+++ b/static/css/account/signup.css
@@ -17,6 +17,10 @@ h1 {
     margin-bottom: 1.5rem;
 }
 
+.errorlist {
+    color: red;
+}
+
 .signup {
     max-width: 500px;
     margin: 2rem auto;
