Add "Go back" option at view details

--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -68,6 +68,7 @@
             </div>
           {% endif %}
         </div>
+        <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary" class="text-end">Back</a>
       </div>
     {% endif %}
   </div>
