Add aria label at each a-tag

--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -38,7 +38,7 @@
                       Parent Unknown
                     </button>   
                   {% endif %}
-                  <a href="{% url 'family_view' main_person.id %}" class="btn btn-secondary mt-2">Cancel</a>
+                  <a href="{% url 'family_view' main_person.id %}" class="btn btn-secondary mt-2" aria-label="Cancel">Cancel</a>
                 </div>
               </form>
             {% else %}
