--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
 
     <div class="d-flex flex-column align-items-center">
       <img src="{% static 'images/logos/error.png' %}" alt="error" class="img-fluid mb-3" style="max-width: 300px; height: auto; border-radius: 12px;" />
-      <a class="btn btn-primary" href="{% url 'home' %}">To the homepage</a>
+      <a class="btn btn-primary" href="{% url 'home' %}" aria-label="Back to Homepage">Back to homepage</a>
     </div>
   </div>
 {% endblock %}
