--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -17,7 +17,7 @@
         <h3>{% trans 'Sign In' %}</h3>
 
         <p class="text-center">
-          {% blocktrans %}Welcome back. If you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
+          {% blocktrans %}Welcome back. If you have not created an account yet, then <a class="link" href="{{ signup_url }}" aria-label="Sign up">sign up</a>
           first.{% endblocktrans %}
         </p>
       </div>
