--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -14,10 +14,10 @@
   </div>
 
   <div class="person-actions">
-    <a href="{% url 'view_details' pov_id person.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-    <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-outline-primary btn-sm">Edit</a>
+    <a href="{% url 'view_details' pov_id person.id %}" class="btn btn-outline-primary btn-sm" aria-label="View Details">View Details</a>
+    <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-outline-primary btn-sm" aria-label="Person">Edit</a>
     {% if person.id != pov_id %}
-      <a href="{% url 'family_view' person.id %}" class="btn btn-outline-secondary btn-sm">Change Focus</a>
+      <a href="{% url 'family_view' person.id %}" class="btn btn-outline-secondary btn-sm" aria-label="Change Focus">Change Focus</a>
     {% endif %}
   </div>
 </div>
