--- a/familytree/templates/familytree/edit_person.html
+++ b/familytree/templates/familytree/edit_person.html
@@ -24,8 +24,8 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Save</button>
-      <a href="{% url 'delete_person' pov_id person.id %}" class="btn btn-danger">Delete</a>
-      <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary">Cancel</a>
+      <a href="{% url 'delete_person' pov_id person.id %}" class="btn btn-danger" aria-label="Delete">Delete</a>
+      <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary" aria-label="Cancel">Cancel</a>
     </form>
   </div>
 {% endblock %}
