--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -32,9 +32,9 @@
                 {{ form|crispy }}
 
                 <div class="d-grid mt-3">
-                  <button id="submitButton" type="submit" class="btn btn-primary btn-lg">Submit</button>
+                  <button id="submitButton" type="submit" class="btn btn-primary btn-lg" aria-label="Submit">Submit</button>
                   {% if relation == 'parent' %}
-                    <button id="unknownParentBtn" class="btn btn-warning mt-2" type="button">
+                    <button id="unknownParentBtn" class="btn btn-warning mt-2" type="button" aria-label="Parent Unknown"">
                       Parent Unknown
                     </button>   
                   {% endif %}
