--- a/familytree/templates/familytree/add_self.html
+++ b/familytree/templates/familytree/add_self.html
@@ -20,7 +20,7 @@
             <form id="person-Form" method="post" enctype="multipart/form-data">
               {% csrf_token %}
               {{ form|crispy }}
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-primary" aria-label="Save">Save</button>
             </form>
           </div>
         </div>
