--- a/familytree/templates/familytree/delete_person.html
+++ b/familytree/templates/familytree/delete_person.html
@@ -7,7 +7,7 @@
   <h3>Are you sure you want to delete {{ person.first_name }} {{ person.last_name }}?</h3>
   <form method="POST">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Yes, delete</button>
+    <button type="submit" class="btn btn-danger" aria-label="Yes delete">Yes, delete</button>
     <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-secondary" aria-label="Cancel">Cancel</a>
   </form>
 </div>
