--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -15,8 +15,8 @@
   {% if person_of_history %}
     <div class="container">
       <div class="row">
-        <div class="col-4"></div>
-        <div class="col-8">
+        <div class="col-lg-4 col-sm-0"></div>
+        <div class="col-lg-8 col-sm-12">
           <h2 class="text-center mt-4 mb-1">Person of the Day</h2>
         </div>
       </div>
