--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -33,10 +33,11 @@
                 {{ relation_form.relation_type|as_crispy_field }}
                 <div class="d-grid mt-3">
                   <button id="submitButton" type="submit" class="btn btn-primary btn-lg" aria-label="Submit">Submit</button>
+                  
+                  <button type="submit" name="save_and_add" class="btn btn-secondary">Save and Add Another</button>
+                  
                   {% if relation == 'parent' %}
-                    <button id="unknownParentBtn" class="btn btn-warning mt-2" type="button" aria-label="Parent Unknown">
-                      Parent Unknown
-                    </button>   
+                    <button id="unknownParentBtn" class="btn btn-warning mt-2" type="button" aria-label="Parent Unknown">Parent Unknown</button>
                   {% endif %}
                   <a href="{% url 'family_view' main_person.id %}" class="btn btn-secondary mt-2" aria-label="Cancel">Cancel</a>
                 </div>
