--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -18,13 +18,11 @@
         {% endfor %}
       </div>
 
-      {% if person.parents.all|length == 0 %}
-        <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
-      {% elif person.parents.all|length == 1 %}
-        <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
+      {% if person.parents.all|length > 0 %}
         <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
       {% else %}
         <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
+        <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
       {% endif %}
     </div>
     {% comment %}Display Siblings{% endcomment %}
