--- a/familytree/templates/demo/demo_view.html
+++ b/familytree/templates/demo/demo_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block meta %}
   <meta name="description" content="Try out Yggdrasil - without registration." />
