--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block meta %}
   <meta name="description" content="Contact the Yggdrasil team for support, feedback or press inquiries." />
