--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block title %}
   <title>View my Family</title>
