--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block title %}
   <title>View Person details</title>
