--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block meta %}
  <meta name="description" content="Every day a new important person from history.">
