--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block meta %}
   <meta name="description" content="Welcome to Yggdrasil - your platform for interactive family tree navigation." />
