--- a/templates/legal_notice.html
+++ b/templates/legal_notice.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block meta %}
   <meta name="description" content="Imprint of Yggdrasil - The Tree of Family." />
