--- a/templates/mfa/recovery_codes/base.html
+++ b/templates/mfa/recovery_codes/base.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "account/base_start_view.html" %}
 {% load i18n %}
 {% block head_title %}
     {% trans "Recovery Codes" %}
