--- a/templates/mfa/recovery_codes/index.html
+++ b/templates/mfa/recovery_codes/index.html
@@ -1,4 +1,4 @@
-{% extends "mfa/recovery_codes/base.html" %}
+{% extends "mfa/recovery_codes/base_start_view.html" %}
 {% load i18n %}
 {% block content %}
     <h1>{% translate "Recovery Codes" %}</h1>
