--- a/templates/mfa/totp/deactivate_form.html
+++ b/templates/mfa/totp/deactivate_form.html
@@ -1,4 +1,4 @@
-{% extends "mfa/totp/base.html" %}
+{% extends "mfa/totp/base_start_view.html" %}
 {% load i18n %}
 {% block content %}
     <h1>{% trans "Deactivate Authenticator App" %}</h1>
