--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_start_view.html' %}
 {% load static %}
 {% block meta %}
   <meta name="description" content="Our privacy policy: transparent, understandable and GDPR-compliant." />
