Create and connect new base-view

--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -1,4 +1,4 @@
-{% extends 'base_start_view.html' %}
+{% extends 'base_app_view.html.html' %}
 {% load static %}
 {% block title %}
   <title>Add Family member</title>
