--- a/familytree/templates/familytree/delete_person.html
+++ b/familytree/templates/familytree/delete_person.html
@@ -1,4 +1,4 @@
-{% extends 'base_start_view.html' %}
+{% extends 'base_app_view.html' %}
 {% block title %}
   <title>Delete Person</title>
 {% endblock %}
