--- a/familytree/templates/familytree/add_self.html
+++ b/familytree/templates/familytree/add_self.html
@@ -1,4 +1,4 @@
-{% extends 'base_start_view.html' %}
+{% extends 'base_app_view.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block title %}
