Expand new base-template

--- a/templates/base_start_view.html
+++ b/templates/base_start_view.html
@@ -126,9 +126,10 @@
 
     {% comment %}Bootstrap JS CDN{% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
+    {% comment %} custom javascript {% endcomment %}
     <script src="{% static 'javascript/base.js' %}"></script>
     {% block javascript %}
 
     {% endblock %}
   </body>
-</html>
+
