--- a/templates/base_app_view.html
+++ b/templates/base_app_view.html
@@ -3,6 +3,7 @@
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
 {% url 'add_self' as add_self_url %}
+{% url 'home' as home_url %}
 {% url 'family_view' person.id as 'family_view_url' %}
 
 <!DOCTYPE html>
@@ -24,16 +25,49 @@
     <link rel="icon" type="image/x-icon" href="{% static 'images/logos/yggdrasil_logo.png' %}" />
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
+    {% comment %} Boxicon CDN {% endcomment %}
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     {% comment %}Custom CSS{% endcomment %}
     <link rel="stylesheet" href="{% static 'css/familytree/base.css' %}" />
     {% block extra_css %}
-    
+
     {% endblock %}
-    {% comment %}HTMX CDN{% endcomment %}
-    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
     {% comment %}jQuery CDN for Select2{% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% block form_media %}
 
     {% endblock %}
   </head>
+  <body>
+    <header>
+      <nav>
+        <button aria-label="Setting"><i class='bx bx-cog'></i></button>
+      </nav>
+      
+    </header>
+    <main>
+      {% if messages %}
+        <div class="container mt-3 message-container">
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        </div>
+      {% endif %}
+      {% block content %}
+
+      {% endblock %}
+    </main>
+    {% comment %}Bootstrap JS CDN{% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
+    {% comment %}HTMX CDN{% endcomment %}
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+    {% comment %} custom javascript {% endcomment %}
+    <script src="{% static 'javascript/base.js' %}"></script>
+    {% block javascript %}
+
+    {% endblock %}
+  </body>
+</html>
