--- a/static/css/familytree/family_view.css
+++ b/static/css/familytree/family_view.css
@@ -9,6 +9,15 @@ body {
     background: linear-gradient(to bottom, #fdf7ec, #f3e5c1);
 }
 
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 #parents-container, #children-container{
     display: flex;
     justify-content: center;
