--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -11,6 +11,10 @@
 {% block content %}
   {% if person %}
     {% comment %}Display Parents{% endcomment %}
+    <a href="{% url 'entire_view' %}" class="btn btn-primary float-end">
+      View Entire Family Tree
+    </a>
+    
     <div id="parents-container">
       <div id="parents-list" style="display: none; margin-top: 1rem;">
         {% for parent in person.parents.all %}
