--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -10,11 +10,14 @@
 {% endblock %}
 {% block content %}
   {% if person %}
-    {% comment %}Display Parents{% endcomment %}
-    <a href="{% url 'entire_view' %}" class="btn btn-primary float-end">
-      View Entire Family Tree
-    </a>
+    <div class="choose-view-container">
+      <a href="#" class="btn btn-light">Focused View</a>
+      <a href="{% url 'entire_view' %}" class="btn btn-dark">
+        Entire View
+      </a>
+    </div>
     
+    {% comment %}Display Parents{% endcomment %}
     <div id="parents-container">
       <div id="parents-list" style="display: none; margin-top: 1rem;">
         {% for parent in person.parents.all %}
@@ -22,7 +25,7 @@
         {% endfor %}
       </div>
 
-      {% if person.parents.all|length > 0 %}
+      {% if person.parents.all|length < 1 %}
         <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
       {% else %}
         <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
