--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -9,10 +9,8 @@
   margin: 1rem;
   text-align: center;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  max-width: 300px;
-  max-height: 300px;
-  min-width: 200px;
-  min-height: 200px;
+  width: 300px;
+  height: 300px;
   transition: transform 0.2s ease;
 }
 
