--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -10,48 +10,57 @@
 {% endblock %}
 {% block content %}
   {% if person %}
-    <div class="choose-view-container">
-      <a href="#" class="btn btn-light">Focused View</a>
-      <a href="{% url 'entire_view' %}" class="btn btn-dark">
-        Entire View
-      </a>
-    </div>
-    
-    {% comment %}Display Parents{% endcomment %}
-    <div id="parents-container">
-      <div id="parents-list" style="display: none; margin-top: 1rem;">
-        {% for parent in person.parents.all %}
-          {% include 'familytree/_person_card.html' with person=parent pov_id=person.id %}
-        {% endfor %}
+    <div class="container">
+      <div class="row">
+        <div class="col align-self-start choose-view-container">
+          <a href="#" class="btn btn-light">Focused View</a>
+          <a href="{% url 'entire_view' %}" class="btn btn-dark">Entire View</a>
+        </div>
       </div>
 
-      {% if person.parents.all|length < 1 %}
-        <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
-      {% else %}
-        <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
-        <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
-      {% endif %}
-    </div>
-    {% comment %}Display Siblings{% endcomment %}
-    <div id="middle-section">
-      <div id="siblings-container">
-        <div id="sibling-list" style="display: none; margin-top: 1rem;">
-          {% for sibling in person.siblings.all %}
-            {% include 'familytree/_person_card.html' with person=sibling pov_id=person.id %}
+      {% comment %}Display Parents{% endcomment %}
+      <div class="row aling-items-center" id="parents-container">
+        <div class="col" id="parents-list" style="display: none; margin-top: 1rem;">
+          {% for parent in person.parents.all %}
+            {% include 'familytree/_person_card.html' with person=parent pov_id=person.id %}
           {% endfor %}
         </div>
 
-        {% if person.siblings|length > 0 %}
-          <button class="btn btn-outline-success" onclick="toggleSection('sibling-list')">Display Siblings</button>
-          <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
+        {% if person.parents.all|length < 1 %}
+          <div class="col aling-items-center">
+            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
+          </div>
         {% else %}
-          <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
+          <div class="col align-items-center">
+            <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
+            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
+          </div>
         {% endif %}
       </div>
-      {% comment %}Display Pov-Person{% endcomment %}
-      {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
+      {% comment %}Display Siblings{% endcomment %}
+      <div class="row aling-items-center">
+        <div class="col" id="siblings-container">
+          <div id="sibling-list" style="display: none; margin-top: 1rem;">
+            {% for sibling in person.siblings.all %}
+              {% include 'familytree/_person_card.html' with person=sibling pov_id=person.id %}
+            {% endfor %}
+          </div>
+          {% if person.siblings|length > 0 %}
+            <button class="btn btn-outline-success" onclick="toggleSection('sibling-list')">Display Siblings</button>
+            <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
+          {% else %}
+            <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="col" id="middle-section">
+        {% comment %}Display Pov-Person{% endcomment %}
+        {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
+      </div>
+
       {% comment %}Display Partner{% endcomment %}
-      <div id="partner-container">
+      <div class="col" id="partner-container">
         <div id="partner-list" style="display: none; margin-top: 1rem;">
           {% for partner in person.partners.all %}
             {% include 'familytree/_person_card.html' with person=partner pov_id=person.id %}
@@ -64,22 +73,24 @@
           <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
         {% endif %}
       </div>
-    </div>
 
-    {% comment %}Display Children{% endcomment %}
-    <div id="children-container">
-      <div id="children-list" style="display: none; margin-top: 1rem;">
-        {% for child in person.children.all %}
-          {% include 'familytree/_person_card.html' with person=child pov_id=person.id %}
-        {% endfor %}
+      {% comment %}Display Children{% endcomment %}
+      <div class="row align-items-center">
+        <div class="col" id="children-container">
+          <div id="children-list" style="display: none; margin-top: 1rem;">
+            {% for child in person.children.all %}
+              {% include 'familytree/_person_card.html' with person=child pov_id=person.id %}
+            {% endfor %}
+          </div>
+
+          {% if person.children.all|length > 0 %}
+            <button class="btn btn-outline-success" onclick="toggleSection('children-list')">Display Children</button>
+            <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
+          {% else %}
+            <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
+          {% endif %}
+        </div>
       </div>
-
-      {% if person.children.all|length > 0 %}
-        <button class="btn btn-outline-success" onclick="toggleSection('children-list')">Display Children</button>
-        <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
-      {% else %}
-        <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
-      {% endif %}
     </div>
     {% comment %}Redirect to add self if Person doesnt exist{% endcomment %}
   {% else %}
